enable/disable single or duo reqs

--- a/src/app/files/adminSettings.json
+++ b/src/app/files/adminSettings.json
@@ -1,5 +1,6 @@
 {
   "defaultTimeout": 48,
   "updatedTimeout": 24,
-  "requestsEnabled": true
+  "duoReqEnabled": true,
+  "singleReqEnabled": true
 }
