--- a/src/app/files/adminSettings.json
+++ b/src/app/files/adminSettings.json
@@ -2,5 +2,5 @@
   "defaultTimeout": 48,
   "updatedTimeout": 2,
   "duoReqEnabled": true,
-  "singleReqEnabled": true
+  "singleReqEnabled": false
 }
